# rust_hls_server

./: Cargo.toml  cert.pem  key.pem
assets/: stream_player.m3u8
src/: main.rs
